# mandelbrot-visualization

./: .gitignore  README.md  index.html  main.min.js  main.min.js.map  package-lock.json  package.json  webpack.config.js
assets/: manifest.json  manifest.webapp
public/: index.html  main.min.js  main.min.js.map
src/: index.html  index.js  main.scss  util.js  utils.js
src/wasm_source/: main.c
src/webgl/: canvas.js  controls.js  engine.js  program.js  shader.js  shader_source.js  userinterface.js
wasm/: .gitignore  Cargo.toml
wasm/src/: lib.rs  old.rs  setup.rs
