[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Larqqa"]
description = "Mandelbrot set calculations with rust"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.47"
console_error_panic_hook = "=0.1.5"

[dependencies.web-sys]
version = "0.3.47"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'CanvasRenderingContext2d'
]